--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,7 +87,7 @@
     --secondary-foreground: 269 18% 81%;
     --muted: 253 19% 91%;
     --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
+    --accent: 253, 19%, 61%;
     --accent-foreground: 210 40% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
