--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,11 @@
 .header {
   width: 100%;
+  
   display: grid;
   align-items: center;
   grid-auto-flow: column;
   grid-template-columns: 1fr 4fr 1fr;
+
   .menu {
     display: flex;
     align-items: center;
@@ -17,15 +19,23 @@
       gap: 6px;
     }
   }
-  
 }
 
 @media screen and (max-width: 768px) {
   .header {
     width: 100%;
-    height: 64px;
+    height: auto;
     display: flex;
-    padding: 0 8px 0 12px;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px;
+
+    .menu {
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 16px;
+    }
 
     .menuItem {
       svg {
